// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-application renders 1`] = `
<body>
  <div />
</body>
`;

exports[`react-application when children is registered and enabled renders 1`] = `
<body>
  <div>
    <div
      data-some-children-test="true"
    >
      Some children
    </div>
  </div>
</body>
`;

exports[`react-application when children is registered and enabled when children is enabled renders 1`] = `
<body>
  <div />
</body>
`;

exports[`react-application when children is registered and enabled when wrapper is registered renders 1`] = `
<body>
  <div>
    <div
      data-some-wrapper-test="true"
    >
      <div
        data-some-children-test="true"
      >
        Some children
      </div>
    </div>
  </div>
</body>
`;
